--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -2,20 +2,20 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.d-flex {
+  display: flex;
 }
-
+.justify-content-around {
+  justify-content: space-around;
+}
+.align-items-center {
+  align-items: center;
+}
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +24,5 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
